GNOME Bugzilla – Bug 128164
trying to set shortcut key for one action results in seetin to anohter action after sorting based an action name
Last modified: 2004-12-22 21:47:04 UTC
gnome-keybinding-properties is build from latest CVS HEAD sources (gnome 2.5) Steps to reproduce. 1. launch /opt/gnome2/bin/gnome-keybinding-properties 2. Without selecting any action click on "action" to sort the entries based on action name. 3. Now select any action and try to set a shortcut key for that. 4. You can see the shortcut key of selected action does not chnage. Infact the shortcut keys entered are set to the action which is present at the same position before sorting the entries.For example trying to set short cut key for "Switch to Workspace 4" results in setting the short cut key for "Move between panel and desktop immediately".
Nice catch, Sivaiah. Scary that that wasn't caught before.
nice catch. fixed.