http://bugzilla.gnome.org/show_bug.cgi?id=128164 don't use get_real_model.

2004-02-17  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=128164
	* gnome-keybinding-properties.c (accel_edited_callback) : don't use
	  get_real_model.  The selection is based on the sorted model.
	(accel_cleared_callback) : ditto, and fix a leak while I'm in here.


2004-02-17  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=133214
	* acinclude.m4 : quote the AC_DEFUN as per patch from
	  alexander.winston@comcast.net

	http://bugzilla.gnome.org/show_bug.cgi?id=124064
	* configure.in : add a test for ngettext.  Used the same test as
	  gnome-vfs for consitency.